@@ -6,7 +6,14 @@ by OpenLDAP functions
 See https://www.python-ldap.org/ for details.
 """
 
-import _ldap,ldap
+from ldap.pkginfo import __version__
+
+import _ldap
+assert _ldap.__version__==__version__, \
+       ImportError('ldap %s and _ldap %s version mismatch!' % (__version__,_ldap.__version__))
+
+import ldap
+
 from ldap.controls import RequestControl,LDAPControl,KNOWN_RESPONSE_CONTROLS
 
 
