@@ -13,6 +13,8 @@ Modules/
 Lib/
 * ldap.__version__, ldap.__author__ and ldap.__license__ now
   imported from new sub-module ldap.pkginfo also to setup.py
+* Added safety assertion when importing _ldap:
+  ldap.pkginfo.__version__ must match _ldap.__version__
 * removed stand-alone module dsml
 * slapdtest.SlapdObject.restart() just restarts slapd
   without cleaning any data
